stop footer overflowing in clinical range

--- a/content/stylesheets/_footer.scss
+++ b/content/stylesheets/_footer.scss
@@ -4,7 +4,7 @@
     background: url('/images/footer-pattern.png');
     background-size: cover;
     line-height: 1.4em;
-    
+
     @include media($transient) {
         background: url('/images/footer-small.png');
     }
@@ -24,12 +24,12 @@
 .footer-content {
     @include span-columns(9);
     @include shift(2);
-    
+
     @include media($serendipity) {
         @include span-columns(10);
         @include shift(1);
     }
-    
+
     letter-spacing: em(1);
     color: $lighter-gray;
 
@@ -47,7 +47,7 @@
             @include span-columns(6);
             @include omega(2n);
         }
-        
+
         @include media($clinical) {
             @include span-columns(12);
             @include omega;
@@ -58,7 +58,7 @@
         font-style: normal;
         padding-top: em(14);
     }
-    
+
     #footer-phone {
         border-top: 1px solid $lighter-gray;
     }
@@ -74,19 +74,19 @@
             border-top: none;
         }
     }
-    
+
 
     #footer-logo {
         @include span-columns(8);
         height: em(30);
-        
+
         img {
             max-height: 100%;
             max-width: 100%;
         }
 
     }
-    
+
     #footer-totop {
         @include span-columns(4);
         padding-top: em(10);
@@ -94,21 +94,21 @@
     }
 
     .cell.social {
-        @include shift(8);
-        @include media($clinical) {
-            @include shift(0);
+        @include shift(0);
+        @include media($serendipity-up) {
+            @include shift(8);
         }
     }
-    
+
     .cell.social > p {
         color: white;
     }
-    
+
     .cell.social > div {
         border-top: 1px solid white;
         padding-top: em(13);
     }
-    
+
     .cell.social > div > a {
         padding: 0 em(15);
     }
@@ -125,9 +125,9 @@
 .footer-content a {
         color: $lighter-gray;
 }
-    
+
 .footer-content a:hover {
     color: lighten($lighter-gray, 20);
 }
 
-    
+
