--- a/content/stylesheets/base/_grid-settings.scss
+++ b/content/stylesheets/base/_grid-settings.scss
@@ -13,6 +13,7 @@ $medium-screen: em(720);
 $small-screen: em(420);
 
 $serendipity: new-breakpoint(max-width $large-screen 12);
+$serendipity-up: new-breakpoint(min-width $large-screen 12);
 
 $clinical: new-breakpoint(max-width $medium-screen 8);
 $clinical-up: new-breakpoint(min-width $medium-screen 12);
